# actix_api_crud

./: .env  .env.example  .env.production  .gitignore  .sqlx  CHANGELOG.md  Cargo.toml  DOCKER_SETUP.md  Dockerfile  ETAPA3-DATABASE.md  ETAPA4_MELHORIAS.md  ETAPA7_RELATORIO.md  ETAPA_6_SECURITY.md  PROJECT_STATUS.md  README.md  UNIDADE_3_CAMADA_DADOS.md  UNIDADE_4_LOGICA_NEGOCIO.md  UNIDADE_6_AUTENTICACAO.md  UNIDADE_7_MIDDLEWARES.md  UNIDADE_8_TESTES.md  Unidade_9_Deployment_Production.md  backup.sh  deploy.sh  docker-compose.yml  setup-postgres.bat  setup-postgres.sh
.github/workflows/: ci.yml  pipeline.yml
database/init/: 01_create_tables.sql
docs/: README.md  api-documentation.md  architecture.md
migrations/: 001_initial_users.down.sql  001_initial_users.up.sql
scripts/: quality_check.ps1  quality_check.sh
src/: lib.rs  main.rs
src/auth/: jwt.rs  login.rs  mod.rs  models.rs
src/config/: app_config.rs  database.rs  mod.rs  security.rs
src/errors/: mod.rs
src/handlers/: mod.rs  user_handler.rs  user_handler_new.rs  user_handler_old.rs
src/middlewares/: auth.rs  auth_middleware.rs  cors.rs  cors_middleware.rs  mod.rs  rate_limit.rs  security.rs  validation.rs  validation_new.rs
src/models/: mod.rs  pagination.rs  user.rs  user_temp.rs
src/repositories/: mod.rs  user_repository.rs  user_repository_temp.rs
src/routes/: mod.rs
src/services/: mod.rs  user_service.rs
tests/: integration_tests.rs  jwt_tests.rs
