[package]
name = "actix_api_crud"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4"
actix-service = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-actix-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
env_logger = "0.11"
log = "0.4"

