[package]
name = "actix_api_crud"
version = "0.1.0"
edition = "2024"

[lib]
name = "actix_api_crud"
path = "src/lib.rs"

[[bin]]
name = "actix_api_crud"
path = "src/main.rs"


[dependencies]
actix-web = "4"
actix-service = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
# Novas dependências para Etapa 4 - CRUD completo
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
futures-util = "0.3"
futures = "0.3"

# Etapa 5 - Autenticação JWT
actix-web-httpauth = "0.8"
serde_with = "3.0"

# Etapa 6 - Middleware, Segurança e Boas Práticas
actix-cors = "0.7"
url = "2.4"

# Etapa 7 - Testes e Qualidade
[dev-dependencies]
actix-rt = "2.9"
tokio = { version = "1", features = ["full"] }
mockall = "0.12"
serial_test = "3.0"
tempfile = "3.8"
rstest = "0.18"
once_cell = "1.19"

# Features para diferentes ambientes
[features]
default = ["production"]
production = []
development = ["console-logging"]
console-logging = []

# Configurações otimizadas para produção
[profile.release]
# Otimização máxima
opt-level = 3
# Permite mais tempo de compilação para melhor otimização
codegen-units = 1
# Link-time optimization
lto = true
# Remove símbolos de debug no release
debug = false
# Panic = abort reduz o tamanho do binário
panic = "abort"
# Strip símbolos para reduzir tamanho
strip = true
# Overflow checks em release (opcional, pode impactar performance)
overflow-checks = false

[profile.dev]
# Para desenvolvimento mais rápido
opt-level = 0
debug = true
incremental = true

[profile.test]
# Para testes otimizados
opt-level = 1
debug = true

